kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - cron-app.13.91.255.118.nip.io
      secretName: cron-app-tls
    
  rules:
    - host: cron-app.13.91.255.118.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cron-service
                port:
                  number: 8083
